Angle units and better creation
- You can now select the units for angles and use them for setting angles too
- You can now go fullscreen (doesn't save across restarts)
- Improved the creation UI - it's now grouped into several categories
- You can now see what shape you're creating
- The coordinate grid is now a little whiter so it doesn't interfere with the shapes